--- a/www/index.html
+++ b/www/index.html
@@ -19,11 +19,14 @@
 	<script src="cordova.js"></script>
 
 	<!-- your app's js -->
-	<script src="js/app.js"></script>
-	<script src="js/controllers.js"></script>
+	<script src="index.js"></script>
+
+	<!-- modules -->
+	<script src="modules/base/base.js"></script>
+	<script src="modules/start/start.js"></script>
 </head>
 
-<body ng-app="starter">
+<body ng-app="app">
 	<ion-nav-view></ion-nav-view>
 </body>
 </html>
