--- a/www/modules/base/base.html
+++ b/www/modules/base/base.html
@@ -9,26 +9,17 @@
 				</button>
 			</ion-nav-buttons>
 		</ion-nav-bar>
-		<ion-nav-view name="menuContent"></ion-nav-view>
+		<ion-nav-view name="main"></ion-nav-view>
 	</ion-side-menu-content>
 
 	<ion-side-menu side="left">
 		<ion-header-bar class="bar-stable">
-			<h1 class="title">Left</h1>
+			<h1 class="title">Menu</h1>
 		</ion-header-bar>
 		<ion-content>
 			<ion-list>
-				<ion-item nav-clear menu-close ng-click="login()">
-					Login
-				</ion-item>
-				<ion-item nav-clear menu-close href="#/app/search">
-					Search
-				</ion-item>
-				<ion-item nav-clear menu-close href="#/app/browse">
-					Browse
-				</ion-item>
-				<ion-item nav-clear menu-close href="#/app/playlists">
-					Playlists
+				<ion-item nav-clear menu-close ui-sref="app.start">
+					Start Page
 				</ion-item>
 			</ion-list>
 		</ion-content>
