"views" is a better name than "modules". Also css view

--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,9 @@
 	<script src="index.js"></script>
 
 	<!-- modules -->
-	<script src="modules/base/base.js"></script>
-	<script src="modules/start/start.js"></script>
+	<script src="views/base/base.js"></script>
+	<script src="views/start/start.js"></script>
+	<script src="views/css/css.js"></script>
 </head>
 
 <body ng-app="app">
