"menu" is a better name than "base"

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
 	<script src="index.js"></script>
 
 	<!-- modules -->
-	<script src="views/base/base.js"></script>
+	<script src="views/menu/menu.js"></script>
 	<script src="views/start/start.js"></script>
 	<script src="views/css/css.js"></script>
 </head>
