--- a/www/index.html
+++ b/www/index.html
@@ -28,6 +28,7 @@
 	<script src="views/menu/menu.js"></script>
 	<script src="views/start/start.js"></script>
 	<script src="views/css/css.js"></script>
+	<script src="views/action-sheet/action-sheet.js"></script>
 </head>
 
 <body ng-app="app">
