--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
 	<script src="views/start/start.js"></script>
 	<script src="views/css/css.js"></script>
 	<script src="views/action-sheet/action-sheet.js"></script>
+	<script src="views/backdrop/backdrop.js"></script>
 </head>
 
 <body ng-app="app">
