Colours range slider view (+ minor formatting changes in some other files)

--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
 	<script src="views/action-sheet/action-sheet.js"></script>
 	<script src="views/backdrop/backdrop.js"></script>
 	<script src="views/content/content.js"></script>
+	<script src="views/colours/colours.js"></script>
 </head>
 
 <body ng-app="app">
