--- a/www/index.html
+++ b/www/index.html
@@ -32,6 +32,7 @@
 	<script src="views/backdrop/backdrop.js"></script>
 	<script src="views/content/content.js"></script>
 	<script src="views/colours/colours.js"></script>
+	<script src="views/events/events.js"></script>
 </head>
 
 <body ng-app="app">
