--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,13 @@
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 	<title>Trying Ionic</title>
 
-	<link href="lib/ionic/css/ionic.css" rel="stylesheet">
-	<link href="styles/style.css" rel="stylesheet">
+	<!-- CSS styles -->
+	<!--<link href="lib/ionic/css/ionic.css" rel="stylesheet">-->
+	<!--<link href="styles/style.css" rel="stylesheet">-->
 
-	<!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-	<link href="css/ionic.app.css" rel="stylesheet">
-	-->
+	<!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above-->
+	<link href="css/styles.css" rel="stylesheet">
+
 
 	<!-- ionic/angularjs js -->
 	<script src="lib/ionic/js/ionic.bundle.js"></script>
