--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,7 @@
 	<script src="views/content/content.js"></script>
 	<script src="views/colours/colours.js"></script>
 	<script src="views/events/events.js"></script>
+	<script src="views/modal/modal.js"></script>
 </head>
 
 <body ng-app="app">
