--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
 	<script src="views/colours/colours.js"></script>
 	<script src="views/events/events.js"></script>
 	<script src="views/modal/modal.js"></script>
+	<script src="views/slide-box/slide-box.js"></script>
 </head>
 
 <body ng-app="app">
