--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 	<!--<link href="styles/style.css" rel="stylesheet">-->
 
 	<!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above-->
-	<link href="css/styles.css" rel="stylesheet">
+	<link href="styles/styles.css" rel="stylesheet">
 
 
 	<!-- ionic/angularjs js -->
