--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
 	<script src="views/events/events.js"></script>
 	<script src="views/modal/modal.js"></script>
 	<script src="views/slide-box/slide-box.js"></script>
+	<script src="views/popover-popup/popover-popup.js"></script>
 </head>
 
 <body ng-app="app">
