--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,7 @@
 	<script src="views/modal/modal.js"></script>
 	<script src="views/slide-box/slide-box.js"></script>
 	<script src="views/popover-popup/popover-popup.js"></script>
+	<script src="views/tabs/tabs.js"></script>
 </head>
 
 <body ng-app="app">
