--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
 	<script src="views/slide-box/slide-box.js"></script>
 	<script src="views/popover-popup/popover-popup.js"></script>
 	<script src="views/tabs/tabs.js"></script>
+	<script src="views/list/list.js"></script>
 </head>
 
 <body ng-app="app">
