Ions and drawer

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,12 @@
 	<!-- cordova script (this will be a 404 during development) -->
 	<script src="cordova.js"></script>
 
+	<!-- 3rd parties -->
+	<script src="lib/ionic-ion-drawer/ionic.contrib.drawer.js"></script>
+	<script src="lib/ionic-ion-header-shrink/ionic.headerShrink.js"></script>
+	<script src="lib/ionic-ion-swipe-cards/ionic.swipecards.js"></script>
+	<script src="lib/ionic-ion-tinder-cards/ionic.tdcards.js"></script>
+
 	<!-- your app's js -->
 	<script src="index.js"></script>
 
@@ -39,6 +45,8 @@
 	<script src="views/popover-popup/popover-popup.js"></script>
 	<script src="views/tabs/tabs.js"></script>
 	<script src="views/list/list.js"></script>
+	<script src="views/ions/ions.js"></script>
+	<script src="views/drawer/drawer.js"></script>
 </head>
 
 <body ng-app="app">
